# fast-api

./: Dockerfile  Makefile  README.md  pyproject.toml
doc/: README.md
fever_integration/: __init__.py  client.py  config.py  endpoints.py  main.py  models.py  session.py  sync.py
perf/: performance.py
tests/: conftest.py  test_client.py  test_endpoints.py  test_sync.py
